--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <div class="education">
                 <p class="degree">Неоконченное высшее (Заочно)</p>
                 <p class="years">2022 - 2026</p>
-                <p>Рязанский филиал Московского политехнического университета</p>
+                <p> Московский политехнический университет</p>
                 <p>Информатика и вычислительная техника</p>
                 <p class="degree">GeekBrains</p>
                 <p class="years">02.2023 – по настоящее время</p>
