--- a/index.html
+++ b/index.html
@@ -141,17 +141,17 @@
         </header>
         <section class="section">
             <h2>Краткая биография</h2>
-            <p>Я учусь на третьем курсе в институте по специальности "Информатика и вычислительная техника". Заканчиваю
-                годовое обучение в GeekBrains, где хорошо усвоил SQL, Python, основы статистики, A/B тестирования, Power
-                BI, Excel, нотации BPMN и UML. Есть интересные проекты в портфолио, связанные с визуализацией в Power
-                BI, анализом данных в Python. На LeetCode решаю задачи на SQL (medium).</p>
+            <p>Я на третьем курсе института по специальности "Информатика и вычислительная техника". В течение года я
+                изучил SQL, Python, основы статистики, A/B тестирование, Power BI, Excel, а также нотации BPMN и UML. В
+                моем портфолио есть несколько интересных проектов по визуализации данных в Power BI и анализу данных на
+                Python. На LeetCode решаю задачи среднего уровня сложности на SQL.</p>
         </section>
         <section class="section">
             <h2>Навыки</h2>
             <div class="skills">
                 <div>
                     <h3>Технические навыки</h3>
-                    <p>Python, SQL, Power BI, Excel, UML, BPMN</p>
+                    <p>Python, SQL, Power BI, Excel, UML, Apache Spark</p>
                 </div>
             </div>
         </section>
@@ -162,13 +162,12 @@
                 <p class="years">2022 - 2026</p>
                 <p> Московский политехнический университет</p>
                 <p>Информатика и вычислительная техника</p>
-                <p class="degree">GeekBrains</p>
-                <p class="years">02.2023 – по настоящее время</p>
-                <p>Data science</p>
-                <p class="degree">Stepik</p>
+                <p class="degree">Stepik Дальневосточный федеральный университет</p>
                 <p class="years">09.2023 – 12.2023</p>
                 <p>Интерактивный тренажер по SQL</p>
-                <p class="degree">Дальневосточный федеральный университет</p>
+                <p class="degree">Яндекс Практикум</p>
+                <p class="years">05.2024 – по настоящее время</p>
+                <p>Основы статистики и A/B-тестирования</p>
                 <p class="degree">Среднее профессиональное</p>
                 <p class="years">2018 - 2022</p>
                 <p>Петербургский Государственный Университет Путей Сообщения императора Александра I</p>
