--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </header>
         <section class="section">
             <h2>Краткая биография</h2>
-            <p>Я на третьем курсе института по специальности "Информатика и вычислительная техника". В течение года я
+            <p>Я на третьем курсе института по специальности "Информатика и вычислительная техника". Я
                 изучил SQL, Python, основы статистики, A/B тестирование, Power BI, Excel, а также нотации BPMN и UML. В
                 моем портфолио есть несколько интересных проектов по визуализации данных в Power BI и анализу данных на
                 Python. На LeetCode решаю задачи среднего уровня сложности на SQL.</p>
