--- a/index.html
+++ b/index.html
@@ -141,10 +141,11 @@
         </header>
         <section class="section">
             <h2>Краткая биография</h2>
-            <p>Я на третьем курсе института по специальности "Информатика и вычислительная техника". Я
-                изучил SQL, Python, основы статистики, A/B тестирование, Power BI, Excel, а также нотации BPMN и UML. В
-                моем портфолио есть несколько интересных проектов по визуализации данных в Power BI и анализу данных на
-                Python. На LeetCode решаю задачи среднего уровня сложности на SQL.</p>
+            <p>Я на третьем курсе института учусь по специальности "Информатика и вычислительная техника". Имею опыт
+                работы с SQL, Python, основами статистики, A/B тестированием, Power BI и Excel,также знаком с
+                нотациями BPMN и UML. В моем портфолио представлены интересные проекты по визуализации данных в Power BI
+                и анализу данных на Python. На платформе LeetCode успешно решаю задачи среднего уровня сложности по SQL.
+            </p>
         </section>
         <section class="section">
             <h2>Навыки</h2>
