--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="skills">
                 <div>
                     <h3>Технические навыки</h3>
-                    <p>Python, SQL, Power BI, Excel, UML, Apache Spark</p>
+                    <p>Python, SQL, Power BI, Excel, UML, Hadoop</p>
                 </div>
             </div>
         </section>
