--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
         </header>
         <section class="section">
             <h2>Краткая биография</h2>
-            <p>Я на третьем курсе института учусь по специальности "Информатика и вычислительная техника". Имею опыт
+            <p>Я на третьем курсе института учусь (заочно) по специальности "Информатика и вычислительная техника". Имею опыт
                 работы с SQL, Python, основами статистики, A/B тестированием, Power BI и Excel,также знаком с
                 нотациями BPMN и UML. В моем портфолио представлены интересные проекты по визуализации данных в Power BI
-                и анализу данных на Python. На платформе LeetCode успешно решаю задачи среднего уровня сложности по SQL.
+                и анализу данных на Python. На платформе LeetCode успешно решаю задачи среднего уровня сложности по SQL. 
             </p>
         </section>
         <section class="section">
@@ -152,7 +152,7 @@
             <div class="skills">
                 <div>
                     <h3>Технические навыки</h3>
-                    <p>Python, SQL, Power BI, Excel, UML, Hadoop</p>
+                    <p>Python, SQL, Power BI, Apache Superset, Excel, UML </p>
                 </div>
             </div>
         </section>
